# large-hashable

./: .gitignore  .travis.yml  ChangeLog  LICENSE  README.md  TODO  default.nix  hie.yaml  large-hashable.cabal  large-hashable.nix  run-benchmarks.sh  run-with-profiling  shell.nix  stack-ghc80.yaml  stack-ghc82.yaml  stack-ghc86.yaml  stack-ghc88.yaml  stack-ghc90.yaml  stack-ghc92.yaml  stack-ghc94.yaml  stack-ghc96.yaml  stack.yaml
benchmark/: Main.hs
benchmark/Data/LargeHashable/Benchmarks/: CryptoHash.hs  Main.hs  Serial.hs  Text.hs
cbits/: f2i.c  md5.c  md5.h
src/: CleverMd5.hs
src/Data/: LargeHashable.hs
src/Data/LargeHashable/: Class.hs  Endianness.hs  Intern.hs  LargeWord.hs  MD5.hs  Serial.hs  TH.hs
test/: Main.hs  bigfile.txt
test/Data/LargeHashable/Tests/: Class.hs  Helper.hs  Inspection.hs  LargeWord.hs  MD5.hs  Serial.hs  Stable.hs  TH.hs
