name:                large-hashable
version:             0.1.0.0
synopsis:            Efficiently hash Haskell values with MD5, SHA256, SHA512 and other hashing algorithms
description:         Please see README.md
homepage:            https://github.com/factisresearch/large-hashable
license:             BSD3
license-file:        LICENSE
author:              Stefan Wehr, Lukas Epple
maintainer:          Stefan Wehr <wehr@cp-med.com>
copyright:           2016 factisresearch GmbH
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    cbits/md5.h
    README.md

library
  hs-source-dirs:      src
  c-sources:           cbits/md5.c
  exposed-modules:     Data.LargeHashable
                     , Data.LargeHashable.Class
                     , Data.LargeHashable.MD5
                     , Data.LargeHashable.Intern
                     , Data.LargeHashable.Serial
                     , Data.LargeHashable.TH
  build-depends:       base
                     , text
                     , bytestring
                     , transformers
                     , base16-bytestring
                     , bytes
                     , containers
                     , unordered-containers
                     , time
                     , template-haskell
  default-language:    Haskell2010
  ghc-options:         -optc -O3 -fno-cse -W -fwarn-unused-imports -fwarn-unused-binds
                       -fwarn-unused-matches -fwarn-unused-do-bind -fwarn-wrong-do-bind
                       -pgmPcpphs -optP--cpp -rtsopts -threaded -funbox-strict-fields
                       -fwarn-missing-signatures

executable large-hashable-benchmark
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  other-modules:       Data.LargeHashable.Benchmarks.CryptoHash
                     , Data.LargeHashable.Benchmarks.Main
  ghc-options:         -optc -O3 -fno-cse -threaded -rtsopts -with-rtsopts=-N
                       -W -fwarn-unused-imports -fwarn-unused-binds
                       -fwarn-unused-matches -fwarn-unused-do-bind -fwarn-wrong-do-bind
                       -pgmPcpphs -optP--cpp -rtsopts -threaded -funbox-strict-fields
                       -fwarn-missing-signatures
  build-depends:       base
                     , large-hashable
                     , safecopy
                     , text
                     , deepseq
                     , cryptohash
                     , bytestring
                     , cereal
                     , byteable
                     , transformers
                     , bytes
  default-language:    Haskell2010

test-suite large-hashable-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , large-hashable
                     , HTF
                     , QuickCheck
                     , text
                     , bytes
                     , bytestring
                     , containers
                     , unordered-containers
                     , hashable
  ghc-options:         -optc -O3 -fno-cse -threaded -rtsopts -with-rtsopts=-N
                       -W -fwarn-unused-imports -fwarn-unused-binds
                       -fwarn-unused-matches -fwarn-unused-do-bind -fwarn-wrong-do-bind
                       -pgmPcpphs -optP--cpp -rtsopts -threaded -funbox-strict-fields
                       -fwarn-missing-signatures
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/factisresearch/large-hashable
